@@ -50,16 +50,22 @@
             <p>You probably want to set <b>Api-Key</b> for other
               applications to use internal API of Prusa Link. For example
               Prusa Slicer can upload files to Prusa Link after slicing.
-              Api-Key length must be at least <i>7 characters</i> long</p>
-
-            <div class="form-group row">
-              <label for="api_key" class="col-sm-2 col-form-label">Api-Key</label>
+            Api-Key length must be at least <i>7 characters</i> long</p>
+            <div class="form-group check row">
+              <label for="use_api_key" class="col-sm-2 form-check-label">Use Api-Key</label>
               <div class="col-sm-10">
-                <input type="text" class="form-control {{ 'is-invalid' if errors.get('api_key') else '' }}" id="api_key" name="api_key" value="{{ wizard.api_key or '' }}">
-                <div class="invalid-feedback">
-                  Please provide an Api-Key with sufficient length.
-                </div>
+                <input type="checkbox" id="use_api_key" name="use_api_key" onclick="useApiKey()" {{ 'checked="checked"' if wizard.use_api_key else '' }}">
               </div>
+            </div>
+
+              <div class="form-group row" id="api_key_form" style="{{ 'visibility:visible' if wizard.use_api_key else 'visibility:hidden' }} ">
+                <label for="api_key" class="col-sm-2 col-form-label">Api-Key</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control {{ 'is-invalid' if errors.get('api_key') else '' }}" id="api_key" name="api_key" value="{{ wizard.api_key or '' }}">
+                  <div class="invalid-feedback">
+                    Please provide an Api-Key with sufficient length.
+                  </div>
+                </div>
 
             </div>
 
@@ -78,6 +84,18 @@
         </div>{# /col-md-9 so end of content  #}
       </div>{# /row #}
     </div>{# /container #}
+
+    <script>
+      function useApiKey() {
+        var checked = document.getElementById("use_api_key").checked;
+        var api_key = document.getElementById("api_key_form");
+        if (checked) {
+          api_key.style.visibility = "visible";
+        } else {
+          api_key.style.visibility = "hidden";
+        }
+      }
+     </script>
 
     {% include "_wizard.html" %}
     {% include "_footer.html" %}
